force-app/main/default/objects/GLBA_Compliance_Event__e/GLBA_Compliance_Event__e.object-meta.xml
<CustomObject>
    <description>Platform Event for GLBA Privacy Rule compliance tracking. Creates immutable audit trail for privacy notice distribution and opt-out management.</description>
    <label>GLBA Compliance Event</label>
    <pluralLabel>GLBA Compliance Events</pluralLabel>
</CustomObject>