force-app/main/default/objects/GLBA_Compliance_Event__e/fields/Action__c.field-meta.xml
<CustomField>
    <fullName>Action__c</fullName>
    <description>Action performed (Notice Sent, Opt-Out Processed, etc.)</description>
    <label>Action</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>