force-app/main/default/objects/GLBA_Compliance_Event__e/fields/Contact_Id__c.field-meta.xml
<CustomField>
    <fullName>Contact_Id__c</fullName>
    <description>ID of the Contact who received the notice</description>
    <label>Contact Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>