force-app/main/default/objects/GLBA_Compliance_Event__e/fields/Notice_Id__c.field-meta.xml
<CustomField>
    <fullName>Notice_Id__c</fullName>
    <description>ID of the Privacy_Notice__c record</description>
    <label>Notice Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>