force-app/main/default/objects/GLBA_Compliance_Event__e/fields/Notice_Type__c.field-meta.xml
<CustomField>
    <fullName>Notice_Type__c</fullName>
    <description>Type of privacy notice (Initial, Annual, Revised)</description>
    <label>Notice Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>