force-app/main/default/objects/GLBA_Compliance_Event__e/fields/Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Timestamp__c</fullName>
    <description>Timestamp when the action occurred</description>
    <label>Timestamp</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>