force-app/main/default/objects/GLBA_Compliance_Event__e/fields/User_Id__c.field-meta.xml
<CustomField>
    <fullName>User_Id__c</fullName>
    <description>ID of the user who performed the action</description>
    <label>User Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>